src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__flat_view_done_shows_epic_card.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
          ◦ BACKLOG 0                  ◦ RUNNING 0                   ◦ REVIEW 0                    ▸ DONE 1 [ ]
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
                              │                           │                              │ ╭──────────────────────────╮
                              │                           │                              │ │  ▎ #10 My Feature        │
                              │                           │                              │ │    ●1 done               │
                              │                           │                              │ ╰──────────────────────────╯
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
[flat] [Space] enter  [Enter] detail  [e]dit  [L] status →  [H] status ←  [x] archive  [a] select all  [n]ew  [E]pic  [D
