src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__flat_view_substatus_indicators_above_epic_headers.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
          ◦ BACKLOG 2                ▸ RUNNING 3 [ ]                 ◦ REVIEW 0                      ◦ DONE 0
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
 ╭──────────────────────────╮ │  ── needs input           │                              │
 │  ▎ #10 Epic Alpha        │ │── Epic Alpha ──────────── │                              │
 │    ●2 unplanned          │ │ ╭───────────────────────╮ │                              │
 ╰──────────────────────────╯ │ │  ▎ #1 Task 1          │ │                              │
 ╭──────────────────────────╮ │ │   ◉ blocked           │ │                              │
 │  ▎ #20 Epic Beta         │ │ ╰───────────────────────╯ │                              │
 │    ●1 unplanned          │ │                           │                              │
 ╰──────────────────────────╯ │  ── active                │                              │
                              │── Epic Alpha ──────────── │                              │
                              │ ╭───────────────────────╮ │                              │
                              │ │  ▎ #3 Task 3          │ │                              │
                              │ │   ◉ running           │ │                              │
                              │ ╰───────────────────────╯ │                              │
                              │── Epic Beta ───────────── │                              │
                              │ ╭───────────────────────╮ │                              │
                              │ │  ▎ #2 Task 2          │ │                              │
                              │ │   ◉ running           │ │                              │
                              │ ╰───────────────────────╯ │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
[flat] [Space] session  [e]dit  [L] move  [H] back  [x] done  [Enter] detail  [c]opy  [a] select all  [n]ew  [E]pic  [D]
